# kaka

./: .gitignore  .gitmodules  .tokeignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/workflows/: test.yml
crates/kaka/: Cargo.toml
crates/kaka-core/: Cargo.toml
crates/kaka-core/src/: graphemes.rs  languages.rs  lib.rs  selection.rs  span.rs  transaction.rs
crates/kaka-core/src/document/: error.rs  mod.rs
crates/kaka-core/src/shapes/: mod.rs
crates/kaka-treesitter/: build.rs
crates/kaka/src/: app.rs  logger.rs  macros.rs  main.rs
crates/kaka/src/client/: canvas.rs  surface.rs
crates/kaka/src/client/composer/: editor.rs  layouter.rs  mod.rs
crates/kaka/src/client/composer/widget/: editor.rs  mod.rs  prompt.rs
crates/kaka/src/client/crossterm_impl/: canvas.rs  mod.rs  utils.rs
crates/kaka/src/editor/: buffer.rs  command.rs  keymap.rs  mod.rs  mode.rs  utils.rs
crates/kaka/src/editor/command/: buffer_mgmt.rs  history.rs  insert_mode.rs  mod.rs  mode_switch.rs  movement.rs  registry.rs  text_manipulation.rs
kaka/: Cargo.toml
kaka-core/: Cargo.toml
kaka-core/src/: history.rs  languages.rs  lib.rs  transaction.rs
kaka-core/src/document/: mod.rs
kaka-core/src/shapes/: point.rs  rect.rs
kaka-treesitter/: Cargo.toml
kaka-treesitter/src/: lib.rs
kaka/src/: app.rs  jobs.rs  logger.rs  main.rs
kaka/src/client/: canvas.rs  mod.rs  style.rs  surface.rs
kaka/src/client/composer/: editor.rs  mod.rs  prompt.rs  widget.rs
kaka/src/client/crossterm_impl/: canvas.rs
kaka/src/editor/: buffer.rs  command.rs  keymap.rs  mod.rs  mode.rs  utils.rs
kaka/src/gui/: mod.rs  surface.rs
kaka/src/gui/composer/: editor.rs  mod.rs  widget.rs
kaka/src/gui/crossterm_impl/: canvas.rs
resources/test/: hearts  schodki
stud/: Cargo.toml
stud-core/: Cargo.toml
stud-core/src/: lib.rs  vec2d.rs
stud-core/src/document/: mod.rs
stud-core/src/shapes/: mod.rs  point.rs  rect.rs  vec2d.rs
stud/src/: app.rs  error.rs  jobs.rs  main.rs
stud/src/editor/: buffer.rs  command.rs  keymap.rs  mod.rs
stud/src/gui/: canvas.rs  composer.rs  mod.rs  style.rs  surface.rs
stud/src/gui/composer/: dummy.rs  editor.rs  mod.rs  widget.rs
stud/src/gui/crossterm_impl/: canvas.rs  utils.rs
stud/src/output/: canvas.rs  crossterm_canvas.rs  error.rs  mod.rs
stud/src/widget/: mod.rs
usr.share.kaka/: languages.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
