[package]
name = "kaka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
ropey = "1.5.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_yaml = "0.9.9"
thiserror = "1.0.31"
