[package]
name = "kaka"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.25.0", features = ["futures-core", "event-stream"] }
thiserror = "1.0.31"

kaka-core = { path = "../kaka-core" }
futures-util = "0.3.21"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "io-std", "net", "macros", "sync"] }
anyhow = "1.0.59"
unicode-segmentation = "1.9.0"
bitflags = "1.3.2"
unicode-width = "0.1.9"
log = "0.4.17"
