[package]
name = "kaka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitflags = "1.3.2"
env_logger = "0.10.0"
log = "0.4.17"
ropey = "1.5.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
smartstring = "1"
thiserror = "1"
unicode-segmentation = "1.10"
unicode-width = "0.1.10"
