[package]
name = "kaka"
version = "0.1.0"
edition = "2021"

[dependencies]
kaka-core = { path = "../kaka-core" }
kaka-treesitter = { path = "../kaka-treesitter" }

crossterm = { version = "0.25.0", features = ["futures-core", "event-stream"] }
thiserror = "1.0.38"

futures-util = "0.3.25"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "io-std", "io-util", "net", "macros", "sync"] }
anyhow = "1.0.68"
unicode-segmentation = "1.10.0"
bitflags = "1.3.2"
unicode-width = "0.1.10"
log = "0.4.17"
env_logger = "0.10"
